Change message bar width to fix horizontal scroll

--- a/app/assets/stylesheets/header.scss
+++ b/app/assets/stylesheets/header.scss
@@ -9,7 +9,7 @@ header {
   justify-content: center;
   align-items: center;
 
-  width: 100vw;
+  width: 100%;
   height: 30px;
   background-color: #ccc5cf;
 }
